remove highlights from insensitive scales to work around gap issue

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -666,9 +666,6 @@ GtkHandleBox .entry:backdrop,
 }
 
 .scale.trough:insensitive {
-    background-image: none;
-    background-color: shade (@theme_bg_color, 1.25);
-    border-color: shade (@inactive_frame_color, 0.9);
     border-radius: 0 12px 12px 0;
     border-width: 1px 1px 1px 0;
 }
@@ -680,13 +677,6 @@ GtkHandleBox .entry:backdrop,
                                   alpha (#000, 0.15),
                                   alpha (#000, 0.07)
                                   );
-}
-
-.scale.trough.vertical:insensitive {
-    background-image: none;
-    background-color: shade (@theme_bg_color, 1.25);
-    border-radius: 12px 12px 0 0;
-    border-width: 1px 1px 0 1px;
 }
 
 .scale.mark {
@@ -707,12 +697,17 @@ GtkHandleBox .entry:backdrop,
 }
 
 .scale.highlight.left:insensitive {
-    border: 1px solid alpha (#000, 0.40);
+    border-color: alpha (#000, 0.35);
+    border-radius:  12px 0 0 12px;
+    border-width: 1px 0 1px 1px;
 
     background-image: linear-gradient(to bottom,
-                                  alpha (#000, 0.30),
-                                  alpha (#000, 0.20)
+                                  alpha (#000, 0.15),
+                                  alpha (#000, 0.07)
                                   );
+
+    box-shadow: inset 0 0 0 1px alpha (#000, 0.03),
+                0 1px 0 0 alpha (#fff, 0.30);
 }
 
 .scale.highlight.bottom {
